add test with excel popup loading

--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -14,25 +14,12 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <div class="modal" id="modal">
-    <div class="score-popup" id="scorePopup">
-      Kết quả: <br>
-      <span id="scoreDisplay">
-      </span>
-      <div id="closeScoreBtn">Xem đáp án</div>
-    </div>
-    <div class="status-popup" id="statusPopup">
-      <div class="message" id="statusMsg">
-      </div>
-      <button id="closeStatusBtn">Đóng</button>
-    </div>
-  </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="%PUBLIC_URL%/js/App.js"></script>
+  <script lang="javascript”src =“%PUBLIC_URL%/js/xlsx.full.min.js"> </script>
 </body>
 
 </html>
