--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Edulogy" />
-  <link rel="shortcut icon" href="https://i.ibb.co/1QCGCkT/cloud-logo-vector-design-template-260nw-1812087388.jpg" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/img/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://kit.fontawesome.com/2b3f16036e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
