--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -7,6 +7,11 @@
   <meta name="description" content="Edulogy" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/img/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Nunito+Sans:wght@300;400;600&family=Nunito:wght@300;400;500;600;700&family=Varela+Round&display=swap"
+    rel="stylesheet">
   <script src="https://kit.fontawesome.com/2b3f16036e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="./css/style.css">
