--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Edulogy" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/img/logo.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/img/shortcut.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
